syntax = "proto3";

package greet;

option go_package = "./core";

message Greeting {
	string first_name = 1;
	string last_name = 2;
}

message GreetingRequest {
	Greeting greeting = 1;
}

message GreetingResponse {
	string result = 1;
}

message GreetManyTimesRequest {
	Greeting greeting = 1;
}

message GreetManyTimesResponse {
	string result = 1;
}

message LongGreetRequest {
	Greeting greeting = 1;
}

message LongGreetResponse {
	string result = 1;
}

message GreetEveryoneRequest {
	Greeting greeting = 1;
}

message GreetEveryoneResponse {
	string result = 1;
}

service GreetingService{
    rpc Greet(GreetingRequest) returns (GreetingResponse){}
    rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse){}
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {}
	rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {}
}
